# aff-toolbox

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: backend-test.yaml  docker-build.yaml  frontend-test.yaml
backend/: Dockerfile
backend/app/: .gitignore  mypy.ini  pyproject.toml
backend/app/app/: exception.py  main.py
backend/app/app/model/: common.py  request.py
backend/app/app/router/: aff.py
backend/app/app/router/aff/: __init__.py  arc.py  chart.py  etc.py  parser.py  timing.py
backend/app/app/tests/: test_arc.py  test_chart.py  test_etc.py  test_main.py  test_timing.py
backend/app/app/utils/: chart.py  postprocess.py  response.py
frontend/: .eslintrc.json  Dockerfile  interface.ts  jest.config.ts  jest.polyfills.js  next-i18next.config.js  next.config.js  package.json  tsconfig.json
frontend/components/: AppBar.tsx  AppBarActions.tsx  ArcPostProcessCard.tsx  CardWithGrid.tsx  Drawer.tsx  IndexRecommendCard.tsx  Layout.tsx  LayoutContainer.tsx  ToolFormikForm.tsx  ToolStack.tsx  ToolTitle.tsx  common.tsx  hints.tsx  history.tsx  input.tsx
frontend/config/: category.ts  jest_resolver.js  modules.ts
frontend/pages/: 404.tsx  [tool].tsx  _app.tsx  _document.tsx  index.tsx  sitemap.xml.ts
frontend/pages/tools/: arc-animate.tsx  arc-break.tsx  arc-crease-line.tsx  arc-rain.tsx  (+14 more)
frontend/styles/: sx.ts
frontend/tests/: mock.ts
frontend/utils/: helpers.ts  hooks.ts  interfaces.ts  store.ts  theme.ts
scripts/: build-multiarch-push.sh  build.sh
(+40 files in other folders)
