[tool.poetry]
name = "aff-toolbox-backend"
version = "2.0.0"
description = ""
authors = ["feightwywx <kururinmiracle@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
arcfutil = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
