[tool.poetry]
name = "aff-toolbox-backend"
version = "2.1.1"
description = ""
authors = ["feightwywx <kururinmiracle@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
arcfutil = "^0.12.3"
pydantic = {extras = ["misc"], version = "^1.10.8"}
opencv-contrib-python-headless = "^4.8.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
httpx = "^0.27.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
